manifests/apps/ui/backend/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
  name: windy-journey-backend
  labels:
    app: windy-journey-backend
    app.kubernetes.io/part-of: windy-journey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: windy-journey-backend
      app.kubernetes.io/part-of: windy-journey
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: windy-journey-backend
        app.kubernetes.io/part-of: windy-journey
    spec:
      automountServiceAccountToken: true
      containers:
        - name: windy-journey-backend
          image: quay.io/wvi/ui-backend:1.0.5
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8888
              protocol: TCP
#          env:
#            - name: UI_URL
#              value: >-
#                http://windy-journey-ui-windy-journey.apps.ocp5.stormshift.coe.muc.redhat.com
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext: {}
      schedulerName: default-scheduler
      serviceAccount: windy-journey-backend
      serviceAccountName: windy-journey-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
