manifests/apps/ui/backend/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: windy-journey-backend
  labels:
    app: windy-journey-backend
    app.kubernetes.io/part-of: windy-journey
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: web
      protocol: TCP
      port: 8888
      targetPort: 8888
    - name: cloudevents
      protocol: TCP
      port: 80
      targetPort: 8888
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: windy-journey-backend
