manifests/apps/ui/backend/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: windy-journey-backend
  labels:
    app: windy-journey-backend
    app.kubernetes.io/part-of: windy-journey
spec:
  to:
    kind: Service
    name: windy-journey-backend
    weight: 100
  port:
    targetPort: web
  wildcardPolicy: None
